# agentic-ai-projects

./: README.md  openai_agents_sdk.md
00_uv_litellm_crewai/: README.md
00_uv_litellm_crewai/01_explore_uv/: pyproject.toml
00_uv_litellm_crewai/01_explore_uv/src/explore_uv/: hello.py
00_uv_litellm_crewai/02_explore_litellm/: pyproject.toml
00_uv_litellm_crewai/02_explore_litellm/src/explore_litellm/: __init__.py  main.py
00_uv_litellm_crewai/03_explore_crewai/: pyproject.toml
00_uv_litellm_crewai/03_explore_crewai/src/explore_crewai/: __init__.py  main.py
01_helloworld/: Dockerfile  pyproject.toml
01_helloworld/01_helloworld/: main.py
02_react_agent/: README.md  pyproject.toml
03_appointment_agent/: README.md  appointment-agent.ipynb
04_explore-mcp/: README.md  pyproject.toml
04_explore-mcp/src/explore_mcp/: __init__.py  main.py
05_ecommerce-agent/: .gitignore  README.md  config.py  project_structure.md  pyproject.toml
05_ecommerce-agent/database/: company_db.json
05_ecommerce-agent/routes/: product_routes.py
05_ecommerce-agent/run/: __init__.py  server.py  web.py
05_ecommerce-agent/ui/: layout.py  product_display.py
06_agents_sdk/: README.md  openai-agents-sdk.txt  pyproject.toml
06_agents_sdk/chapter/agents/: agent.py
06_agents_sdk/src/agents_sdk/: multi-agent.py
07_agents_sdk_chainlit/: .gitignore  README.md  pyproject.toml
08_chainlit/: main.py  pyproject.toml
09_fastapi_mcp/: README.md  main.py  pyproject.toml
10_agents_sdk_advance/: README.md  main.py  pyproject.toml
11_fastapi_oas/: README.md  main.py  pyproject.toml  test_main.py
12_litellm_openrouter/: .env.example  README.md  pyproject.toml  try_litellm.py  try_openrouter.py
helloworld/: README.md  requirements.txt
react_appointment_agents/: Dockerfile  langgraph.json  pyproject.toml
react_appointment_agents/google-collab/: appointment_agent.ipynb
react_appointment_agents/src/appointment_agent/: __init__.py  configuration.py  graph.py  prompts.py  state.py
react_appointment_agents/src/appointment_agent/nodes/: __init__.py  _tools.py  find_slots.py  generate_response.py
react_appointment_agents/src/appointment_agent/tools/: __init__.py  user_profile_finder.py
