[project]
name = "explore-mcp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Asharib", email = "asharibarain4@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "mcp[cli]>=1.2.1",
]

[project.scripts]
explore-mcp = "explore_mcp:main.main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
