[project]
name = "agents-sdk"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [{ name = "Asharib", email = "asharibarain4@gmail.com" }]
requires-python = ">=3.12"
dependencies = [
    "openai-agents>=0.0.3",
]

[project.scripts]
agents = "agents_sdk.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
