[project]
name = "litellm-openrouter"
version = "0.1.0"
description = "Learning OpenRouter and LiteLLM integration"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "litellm>=1.72.1",
    "openai>=1.0.0",
    "requests>=2.31.0",
    "python-dotenv>=1.0.0",
    "openai-agents>=0.0.17",
]
