[project]
name = "explore-uv"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Asharib", email = "asharibali@proton.me" }
]
requires-python = ">=3.12"
dependencies = []

[project.scripts]
uit = "explore_uv:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
